fixed alignment on red-transistion headers

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -58,6 +58,7 @@
     width: 100%;
     margin-top: 2em;
     display: flex;
+    justify-content: center;
     position: static;
     z-index: 1;
 }
